[tool.poetry]
name = "d-geolib-plus"
version = "0.1.2"
description = "GEOLib+ components"
authors = ["Maarten Pronk <git@evetion.nl>", "Deltares"]
license = "LGPL-3.0-or-later"
packages = [
    {include = "geolib_plus"}
]

[tool.poetry.dependencies]
python = "^3.8 <3.10"
pydantic = "^1"
pyproj = "^3.3"
pandas = "^1.4"
tqdm = "^4"
scipy = "^1.6"
lxml = "^4.7"
numpy = "^1.19"
matplotlib = "^3.4"
Shapely = "^1.8"
pyshp = "^2.1"
more-itertools = "^8.6"
netCDF4 = "^1.5"
requests = "^2.26"
d-geolib = "^0.1"

[tool.poetry.dev-dependencies]
teamcity-messages = "^1"
pytest = "^6"
coverage = "^5"
pytest-cov = "^2"
Sphinx = "^3.2"
releases = "^1.6"
rst2pdf = "^0.98"
isort = "^5.9.3"
black = "^22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "unittest",
    "integrationtest",
    "systemtest",
    "acceptancetest",
    "workinprogress",
    "integration"
]

[tool.black]
line-length = 90
target-version = ['py37']

[isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=90
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
tag-format = "$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:^version",
    "tests/test_geolib_plus.py:^version",
    "geolib_plus/__init__.py:__version__",
]
annotated_tag = true
