[tool.poetry]
name = "d-geolib-plus"
version = "0.3.0"
description = "GEOLib+ components"
authors = ["Maarten Pronk <git@evetion.nl>", "Deltares"]
license = "LGPL-3.0-or-later"
homepage = "https://deltares.github.io/geolib-plus/"
documentation = "https://deltares.github.io/geolib-plus/"
repository = "https://github.com/Deltares/geolib-plus"
readme = "README.rst"
packages = [
    {include = "geolib_plus"}
]

[tool.poetry.dependencies]
python = "^3.9 <3.13"
pydantic = "^1"
pyproj = "^3.6.1"
pandas = "^2.1.3"
tqdm = "^4.66.1"
scipy = "^1.11.3"
lxml = "^4.9.3"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
pyshp = "^2.3.1"
more-itertools = "^10.1.0"
netCDF4 = "^1.6.5"
requests = "^2.26"
d-geolib = "^1.3.3"
shapely = "^2.0.2"
myst_nb = "^1.0.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
teamcity-messages = "^1.32"
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
releases = "^1.6.3"
rst2pdf = "^0.99"
isort = "^5.10.1"
black = ">=22.8.0,<22.10.0"
sphinx = "^5.3.0"
mypy = "^0.991"
sphinxcontrib-bibtex = "^2.5.0"
folium = "^0.13.0"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"

[tox]
isolated_build = true
envlist = "py39, py310"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "unittest",
    "integrationtest",
    "systemtest",
    "acceptancetest",
    "workinprogress",
    "integration"
]

[tool.black]
line-length = 90
target-version = ['py38']

[isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=90
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag-format = "$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:^version",
    "tests/test_geolib_plus.py:^version",
    "geolib_plus/__init__.py:__version__",
]
annotated_tag = true
